# duckbike

./: .gitignore  README.md  config.py  operators.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yml  ingestion.yml
extraction/: extraction_task.py  gbfs_client.py  parser.py  writer.py
extraction/operators/: dott.py  velib.py
jobs/: build_walk_time_matrix.py  fetch_operator_zone.py  fetch_osm_graphs.py  seed_filosofi_paris.py
serving/: app.py  db.py
serving/views/: _daytype.py  coverage_gaps.py  coverage_over_time.py  fleet_quality.py  od_density.py  road_usage.py
transform/: build_and_publish.py
transform/duckbike/: .user.yml  dbt_project.yml  profiles.yml
transform/duckbike/models/: sources.yml
transform/duckbike/models/marts/: mart_cell_coverage.sql  mart_coverage_per_snapshot.sql  mart_matched_trips.py  mart_od_density.sql  mart_road_usage.py  mart_theatrical_supply.sql
transform/duckbike/models/staging/: stg_filosofi.sql  stg_free_bikes.sql
transform/duckbike/seeds/: dott_paris_operator_zones.csv  filosofi_paris.csv
utils/: logger.py  osm_graph.py  r2_storage.py  zones.py
