[project]
name = "duckbike"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
dev = [
    "black>=25.12.0",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "ruff>=0.15.13",
    "sqlfluff>=4.2.1",
    "sqlfluff-templater-dbt>=4.2.1",
]

[tool.uv]
default-groups = "all"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=8.0.1",
    "ruff>=0.15.17",
]
extraction = [
    "boto3>=1.43.16",
    "h3>=4.4.2",
    "httpx>=0.28.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]
serving = [
    "plotly>=6.7.0",
    "streamlit>=1.58.0",
]
transform = [
    "dbt-core>=1.9.0",
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.5.3",
    "h3>=4.4.2",
    "networkx>=3.6.1",
    "osmnx>=2.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
